fixed favorite on safari

--- a/app/assets/stylesheets/scss/_products.scss
+++ b/app/assets/stylesheets/scss/_products.scss
@@ -143,6 +143,7 @@ $colPadding: 10px;
           display: flex;
           align-items: center;
           margin-left: 10px;
+          width: 38px;
         }
       }
     }
